# crowdsafe-openenv

./: .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_inference.sh
.claude/: settings.json  settings.local.json
app/: __init__.py  env.py  models.py  rewards.py  server.py  simulation.py  tasks.py
server/: app.py
tests/: test_env.py
